@@ -130,6 +130,13 @@
     <itemizedlist>
       <listitem>
 	<para>
+	  Named could deadlock there were multiple changes to
+	  NSEC/NSEC3 parameters for a zone being processed at the
+	  same time. [RT #42770]
+	</para>
+      </listitem>
+      <listitem>
+	<para>
 	  Named could trigger a assertion when sending notify
 	  messages. [RT #44019]
 	</para>
